# parser-tg-bot

./: .gitignore  DEPLOY.md  pyproject.toml
telegram-bot/: .env.example   config.py
telegram_bot/: .env.example  __main__.py  config.py  db.py  tables.sql
telegram_bot/handlers/: __init__.py  all_notifications.py  buy_subscription.py  decorators.py  help.py  keyboards.py  menu.py  min_dump.py  min_liquidity.py  min_pump.py  only_dumps.py  response.py  settings.py  start.py
telegram_bot/services/: payment.py  subscription.py  users.py
