[tool.poetry]
name = "parse-tg-bot"
version = "0.1.0"
description = ""
authors = ["Too Much Fun <mihail.karpinskii@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
python-telegram-bot = "^20.8"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
selenium = "^4.18.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
